<package>
  <name>mav_ompl_planning</name>
  <version>0.0.1</version>
  <description>Planner implementations for MAVs in OMPL</description>

  <maintainer email="jaeyoung@auterion.com">Jaeyoung Lim</maintainer>

  <author>Jaeyoung Lim</author>

  <license>BSD-3</license>

  <url type="website">https://github.com/Jaeyoung-Lim/mav_ompl_planning</url>
  <url type="bugtracker">https://github.com/Jaeyoung-Lim/mav_ompl_planning/issues</url>s

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->

  <export>
    <metapackage/>
  </export>
</package>
